--- a/pom.xml
+++ b/pom.xml
@@ -115,11 +115,11 @@
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <maven.version>3.6.3</maven.version>
+    <maven.version>3.6.1</maven.version>
     <sbt.project.name>spark</sbt.project.name>
     <slf4j.version>1.7.30</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
-    <hadoop.version>2.7.4</hadoop.version>
+    <hadoop.version>2.7.2</hadoop.version>
     <protobuf.version>2.5.0</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
     <zookeeper.version>3.4.14</zookeeper.version>
@@ -127,8 +127,8 @@
     <hive.group>org.apache.hive</hive.group>
     <hive.classifier>core</hive.classifier>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>2.3.7</hive.version>
-    <hive23.version>2.3.7</hive23.version>
+    <hive.version>2.3.2</hive.version>
+    <hive23.version>2.3.2</hive23.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>2.3</hive.version.short>
     <!-- note that this should be compatible with Kafka brokers version 0.10 and up -->
@@ -2368,12 +2368,12 @@
                 <goal>compile</goal>
               </goals>
             </execution>
-            <execution>
-              <id>scala-test-compile-first</id>
-              <goals>
-                <goal>testCompile</goal>
-              </goals>
-            </execution>
+<!--            <execution>-->
+<!--              <id>scala-test-compile-first</id>-->
+<!--              <goals>-->
+<!--                <goal>testCompile</goal>-->
+<!--              </goals>-->
+<!--            </execution>-->
             <execution>
               <id>attach-scaladocs</id>
               <phase>verify</phase>
@@ -3129,7 +3129,7 @@
         </pluginManagement>
       </build>
     </profile>
-    
+
     <profile>
       <id>scala-2.13</id>
       <properties>
