--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -102,18 +102,18 @@ jobs:
         java-version: ${{ matrix.java }}
     # PySpark
     - name: Install PyPy3
-      # Note that order of Python installations here matters because default python3 is
-      # overridden by pypy3.
+      # Note that order of Python installations here matters because default python is
+      # overridden.
       uses: actions/setup-python@v2
       if: contains(matrix.modules, 'pyspark')
       with:
         python-version: pypy3
         architecture: x64
-    - name: Install Python 3.8
+    - name: Install Python 3.6
       uses: actions/setup-python@v2
       if: contains(matrix.modules, 'pyspark')
       with:
-        python-version: 3.8
+        python-version: 3.6
         architecture: x64
     - name: Install Python 2.7
       uses: actions/setup-python@v2
@@ -122,13 +122,13 @@ jobs:
       with:
         python-version: 2.7
         architecture: x64
-    - name: Install Python packages (Python 3.8 and PyPy3)
+    - name: Install Python packages (Python 3.6 and PyPy3)
       if: contains(matrix.modules, 'pyspark')
       # PyArrow is not supported in PyPy yet, see ARROW-2651.
       # TODO(SPARK-32247): scipy installation with PyPy fails for an unknown reason.
       run: |
-        python3.8 -m pip install numpy pyarrow pandas scipy xmlrunner
-        python3.8 -m pip list
+        python3.6 -m pip install numpy pyarrow pandas scipy xmlrunner
+        python3.6 -m pip list
         # PyPy does not have xmlrunner
         pypy3 -m pip install numpy pandas
         pypy3 -m pip list
