Add 'build' and 'project/build.properties' into cache key of SBT and Zinc

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -102,7 +102,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: build
-        key: build-${{ hashFiles('**/pom.xml') }}
+        key: build-${{ hashFiles('**/pom.xml') }}-${{ hashFiles('project/build.properties') }}-${{ hashFiles('build') }}
         restore-keys: |
           build-
     - name: Cache Maven local repository
