--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -99,10 +99,20 @@ jobs:
       run: git merge --progress --ff-only origin/${{ github.event.inputs.target }}
     # Cache local repositories. Note that GitHub Actions cache has a 2G limit.
     - name: Cache Scala, SBT, Maven and Zinc
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
-        path: build
-        key: build-${{ hashFiles('**/pom.xml') }}-${{ hashFiles('project/build.properties') }}-${{ hashFiles('build') }}
+        path: |
+          build/apache-maven-*
+          build/zinc-*
+          build/scala-*
+          build/*.jar
+        key: >-
+          build-${{ hashFiles('**/pom.xml') }}
+          -${{ hashFiles('project/build.properties') }}
+          -${{ hashFiles('build/mvn') }}
+          -${{ hashFiles('build/sbt') }}
+          -${{ hashFiles('build/sbt-launch-lib.bash') }}
+          -${{ hashFiles('build/spark-build-info') }}
         restore-keys: |
           build-
     - name: Cache Maven local repository
