--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -241,7 +241,7 @@ jobs:
       run: |
         sudo apt-get install -y libcurl4-openssl-dev
         sudo Rscript -e "install.packages(c('devtools'), repos='https://cloud.r-project.org/')"
-        sudo Rscript -e "devtools::install_github('jimhester/lintr@v2.0.0')"
+        sudo Rscript -e "devtools::install_github('jimhester/lintr')"
         ./R/install-dev.sh
     - name: Install Ruby 2.7 for documentation generation
       uses: actions/setup-ruby@v1
