--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
     If you are changing Arrow version specification, please check ./python/pyspark/sql/utils.py,
     and ./python/setup.py too.
     -->
-    <arrow.version>1.0.0-SNAPSHOT</arrow.version>
+    <arrow.version>1.0.1</arrow.version>
     <!-- org.fusesource.leveldbjni will be used except on arm64 platform. -->
     <leveldbjni.group>org.fusesource.leveldbjni</leveldbjni.group>
 
